--- a/index.html
+++ b/index.html
@@ -1,90 +1,102 @@
+<!--HTML-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Log In</title>
-</head>
-<body>
-    <header>
-        <h2 class="logo">LOG IN</h2>
-        <nav class="navegation">
-            <a href="#">HOME</a>
-            <a href="#">ABOUT</a>
-            <a href="#">SERVICES</a>
-            <a href="#">CONTACT</a>
-            <button class="buttonLogin">LOGIN</button>
-            <button onclick="burgerMenu()" class="burgerMenu"><ion-icon name="menu-outline" class="OpenBurgerMenuIcon"></ion-icon></button>
-        </nav>
-       <button onclick="burgerMenu()" class="burgerMenu"><ion-icon name="menu-outline" class="OpenBurgerMenuIcon"></ion-icon></button>
-    </header>
-    <main>
-        <div class="wrapper">
-            <span class="icon-close">
-                <ion-icon name="close-outline"></ion-icon>
-            </span>
-
-            <div class="box-login login">
-                <h2>LOGIN</h2>
-                <form action="#" method="post">
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                        <input type="email" name="mail" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                        <input type="password" name="pass" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remember">
-                        <label><input type="checkbox">Remember Me
-                        </label>
-                        <a href="#">Forgot Password?</a>
-                    </div>
-                    <button type="submit" class="btn">LOGIN</button>
-                    <div class="login-register">
-                        <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
-                    </div>
-                </form>
+    <!--HEAD-->
+    <head>
+        <!--META-->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--LINK FAV ICON-->
+        <link rel="icon" type="image/png"  href="./imagenes/favicon.png">
+        <!--LINK CSS-->
+        <link rel="stylesheet" href="./styles.css">
+        <!--TITLE-->
+        <title>Log In</title>
+    </head>
+    <!--BODY-->
+    <body>
+        <!--HEADER-->
+        <header>
+            <h2 class="logo">LOG IN</h2>
+            <nav class="navegation">
+                <a href="#">HOME</a>
+                <a href="#">ABOUT</a>
+                <a href="#">SERVICES</a>
+                <a href="#">CONTACT</a>
+                <button class="buttonLogin">LOGIN</button>
+                <button onclick="burgerMenu()" class="burgerMenu"><ion-icon name="menu-outline" class="OpenBurgerMenuIcon"></ion-icon></button>
+            </nav>
+        <button onclick="burgerMenu()" class="burgerMenu"><ion-icon name="menu-outline" class="OpenBurgerMenuIcon"></ion-icon></button>
+        </header>
+        <!--MAIN-->
+        <main>
+            <!--FOMULATION'S CONTAINERS-->
+            <div class="wrapper">
+                <span class="icon-close">
+                    <ion-icon name="close-outline"></ion-icon>
+                </span>
+                <!--LOGIN-->
+                <div class="box-login login">
+                    <h2>LOGIN</h2>
+                    <form id="formLogin" action="#" method="POST">
+                        <div class="input-box">
+                            <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                            <input type="email" name="mail" required>
+                            <label>Email</label>
+                        </div>
+                        <div class="input-box">
+                            <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                            <input type="password" name="pass" required>
+                            <label>Password</label>
+                        </div>
+                        <div class="remember">
+                            <label><input type="checkbox">Remember Me
+                            </label>
+                            <a href="#">Forgot Password?</a>
+                        </div>
+                        <button type="submit" class="btn" onclick="return validateLogin();">LOGIN</button>
+                        <div class="login-register">
+                            <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
+                        </div>
+                    </form>
+                </div>
+                <!--REGISTER-->
+                <div class="box-login register">
+                    <h2>REGISTRATION</h2>
+                    <form id="formRegister" action="DB/Register.php" method="POST">
+                        <div class="input-box">
+                            <span class="icon"><ion-icon name="person"></ion-icon></span>
+                            <input type="text" name="username" required>
+                            <label>Username</label>
+                        </div>
+                        <div class="input-box">
+                            <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                            <input type="email" name="email" required>
+                            <label>Email</label>
+                        </div>
+                        <div class="input-box">
+                            <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                            <input type="password" name="pass" required>
+                            <label>Password</label>
+                        </div>
+                        <div class="remember">
+                            <laber><input type="checkbox">I Agree To The Terms & Conditions
+                            </label>
+                        </div>
+                        <button type="submit" class="btn" onclick="return validateRegister();">REGISTER</button>
+                        <div class="login-register">
+                            <p>Already have an account?<a href="#" class="login-link">Login</a></p>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <div class="box-login register">
-                <h2>REGISTRATION</h2>
-                <form action="./DB/Register.php">
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="person"></ion-icon></span>
-                        <input type="text" name="username" required>
-                        <label>Username</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                        <input type="email" name="mail" required>
-                        <label>Email</label>
-                    </div>
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                        <input type="password" name="pass" required>
-                        <label>Password</label>
-                    </div>
-                    <div class="remember">
-                        <laber><input type="checkbox">I Agree To The Terms & Conditions
-                        </label>
-                    </div>
-                    <button type="submit" class="btn">REGISTER</button>
-                    <div class="login-register">
-                        <p>Already have an account?<a href="#" class="login-link">Login</a></p>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <p class="creator">All rights reserved to the creator</p>
-    </footer>
-    <script src="./script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+        </main>
+        <!--FOOTER-->
+        <footer>
+            <p class="creator">All rights reserved to the creator</p>
+        </footer>
+        <script src="./script.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    </body>
 </html>
